[package]
name = "ssim2-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the SSIMULACRA2 perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
# Defaults removed `fast-reduction` 2026-05-26 (task #52). The portable
# per-thread-partials + finalize reduction is deterministic (bit-identical
# across re-runs of the same input) and works on every cubecl backend
# including Metal. Opt back into `fast-reduction` for the ~2-3× CUDA-only
# speed boost at the cost of ~5e-5 reorder noise across re-runs.
default = ["cuda", "wgpu", "cpu", "pixels"]
# Runtime features imply `cubecl-types` so example / bench drivers
# (e.g. `examples/bench_pair_vs_cached_cuda.rs`) that import `Ssim2<R>`
# directly compile when any backend feature is enabled.
cuda = ["cubecl/cuda", "cubecl-types"]
wgpu = ["cubecl/wgpu", "cubecl-types"]
hip = ["cubecl/hip", "cubecl-types"]
cpu = ["cubecl/cpu", "cubecl-types"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# Exposes the generic typed Ssim2<R> / Ssim2Batch<R>. Off by default.
cubecl-types = []
# OFF by default since 2026-05-26 (task #52). Opt in to use
# `Atomic<f32>::fetch_add` for the per-octave reduction. Verified
# correct on:
#   - CUDA   (NVIDIA, native runtime)
#   - DX12   (Windows wgpu, real NVIDIA / AMD driver — including RTX 5070)
#   - HIP    (AMD ROCm) — by analogy; uses CUDA-style atomic intrinsics
# Verified BROKEN on:
#   - Metal  (cubecl-wgpu's Metal backend reports Atomic<f32> = LoadStore|Add
#            as supported, but the codegen silently no-ops at execution
#            time — every reduction returns zero and every score
#            collapses to ~100).
#
# Trade-off: ~2-3× faster on CUDA at small image sizes, but the atomic-add
# commit order varies across launches — two runs of the same input
# diverge by ~5e-5 in the final score (no-op in practice for picker /
# training data, but breaks "million metrics" bit-reproducibility). The
# portable per-thread-partials + finalize path (default since task #52)
# is bit-identical across runs and works on every cubecl backend.
#
# Enable for CUDA-only deployments where the 2-3× reduction win matters
# more than reproducibility:
#   cargo build -p ssim2-gpu --features cuda,fast-reduction
fast-reduction = []
# Opt-in separable FIR D=5 Gaussian blur path
# (Kanetaka et al. IWAIT 2026 Technique 1). OFF by default — the
# default surface remains the canonical libjxl IIR + skip-map only.
#
# The FIR is a **distinct metric** (per-image scores diverge from the
# IIR's by design — different impulse-response support); enabling this
# feature surfaces `Ssim2Blur`, `with_blur` / `set_blur` / `blur()`,
# `SSIM2_FIR_COLUMN_NAME`, and `column_name_for_blur`. Users sweeping
# both should land FIR scores in a dedicated parquet column via
# `SSIM2_FIR_COLUMN_NAME` to avoid mixing with IIR's column.
fir = []

[dependencies]
cubecl = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[build-dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

[dev-dependencies]
ssimulacra2 = { workspace = true }
yuvxyb = "0.5.0"
bytemuck = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

# Examples and tests consuming the typed Ssim2<R> / Ssim2Batch<R>.
[[example]]
name = "batch_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "bench_batch"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "blur_parity"
required-features = ["cubecl-types"]

[[example]]
name = "cached_reference"
required-features = ["cubecl-types"]

[[example]]
name = "end_to_end"
required-features = ["cubecl-types"]

[[example]]
name = "parity_jpeg_corpus"
required-features = ["cubecl-types"]

[[example]]
name = "parity_real_image"
required-features = ["cubecl-types"]

[[example]]
name = "srgb_parity"
required-features = ["cubecl-types"]

[[example]]
name = "ssim2_bench_warm"
required-features = ["cubecl-types"]

[[example]]
name = "xyb_parity"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole"
required-features = ["cubecl-types"]

[[test]]
name = "blur_mode_api"
required-features = ["cubecl-types"]

[[test]]
name = "fir_path"
required-features = ["cubecl-types", "fir"]

[[test]]
name = "parity_lock"
required-features = ["cubecl-types"]

[[test]]
name = "ssim2_skipmap_audit"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]

[[test]]
name = "strip_parity"
required-features = ["cubecl-types"]

[[test]]
name = "aliasing_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "reduction_determinism"
required-features = ["cubecl-types"]
