[package]
name = "ssim2-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the SSIMULACRA2 perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
# Defaults removed `fast-reduction` 2026-05-26 (task #52). The portable
# per-thread-partials + finalize reduction is deterministic (bit-identical
# across re-runs of the same input) and works on every cubecl backend
# including Metal. Opt back into `fast-reduction` for the ~2-3× CUDA-only
# speed boost at the cost of ~5e-5 reorder noise across re-runs.
default = ["cuda", "wgpu", "cpu", "pixels"]
# Runtime features imply `cubecl-types` so example / bench drivers
# (e.g. `examples/bench_pair_vs_cached_cuda.rs`) that import `Ssim2<R>`
# directly compile when any backend feature is enabled.
cuda = ["cubecl/cuda", "cubecl-types", "zenmetrics-gpu-core/cuda"]
wgpu = ["cubecl/wgpu", "cubecl-types", "zenmetrics-gpu-core/wgpu"]
hip = ["cubecl/hip", "cubecl-types", "zenmetrics-gpu-core/hip"]
cpu = ["cubecl/cpu", "cubecl-types", "zenmetrics-gpu-core/cpu"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "zenmetrics-gpu-core/pixels"]
# Exposes the generic typed Ssim2<R> / Ssim2Batch<R>. Off by default.
cubecl-types = ["zenmetrics-gpu-core/cubecl-types"]
# OFF by default since 2026-05-26 (task #52). Opt in to use
# `Atomic<f32>::fetch_add` for the per-octave reduction. Verified
# correct on:
#   - CUDA   (NVIDIA, native runtime)
#   - DX12   (Windows wgpu, real NVIDIA / AMD driver — including RTX 5070)
#   - HIP    (AMD ROCm) — by analogy; uses CUDA-style atomic intrinsics
# Verified BROKEN on:
#   - Metal  (cubecl-wgpu's Metal backend reports Atomic<f32> = LoadStore|Add
#            as supported, but the codegen silently no-ops at execution
#            time — every reduction returns zero and every score
#            collapses to ~100).
#
# Trade-off: ~2-3× faster on CUDA at small image sizes, but the atomic-add
# commit order varies across launches — two runs of the same input
# diverge by ~5e-5 in the final score (no-op in practice for picker /
# training data, but breaks "million metrics" bit-reproducibility). The
# portable per-thread-partials + finalize path (default since task #52)
# is bit-identical across runs and works on every cubecl backend.
#
# Enable for CUDA-only deployments where the 2-3× reduction win matters
# more than reproducibility:
#   cargo build -p ssim2-gpu --features cuda,fast-reduction
fast-reduction = []
# Opt-in separable FIR D=5 Gaussian blur path
# (Kanetaka et al. IWAIT 2026 Technique 1). OFF by default — the
# default surface remains the canonical libjxl IIR + skip-map only.
#
# The FIR is a **distinct metric** (per-image scores diverge from the
# IIR's by design — different impulse-response support); enabling this
# feature surfaces `Ssim2Blur`, `with_blur` / `set_blur` / `blur()`,
# `SSIM2_FIR_COLUMN_NAME`, and `column_name_for_blur`. Users sweeping
# both should land FIR scores in a dedicated parquet column via
# `SSIM2_FIR_COLUMN_NAME` to avoid mixing with IIR's column.
fir = []
# `cudarse-parity` was a no-op feature retained from the deleted
# `tests/cudarse_parity.rs` integration test (removed 2026-05-27 to
# unbreak CI — see below). Kept as an empty stub so external callers
# that pass `--features cudarse-parity` from older scripts still see
# a recognised feature name rather than a hard error. May be removed
# in a future cleanup once those callers have caught up.
cudarse-parity = []

[dependencies]
cubecl = { workspace = true }
zenmetrics-gpu-core = { path = "../zenmetrics-gpu-core", default-features = false }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[build-dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

[dev-dependencies]
# `coefficient` was previously a dev-dep here for the now-deleted
# `tests/cudarse_parity.rs` (which compared this crate's CubeCL SSIM2
# kernels against coefficient's cudarse/turbo-metrics SSIM2 backend).
#
# The dep was removed 2026-05-27 because:
#
# 1. CI runners don't have `../../../../coefficient` on disk — the
#    path-dep manifest read failed at cargo's metadata-load step on
#    every job (linux/windows/macos/i686-cross), masking every other
#    CI signal.
# 2. coefficient's `gpu` feature (default-on) pulls path-deps on
#    ssim2-gpu / butteraugli-gpu / dssim-gpu / zensim-gpu via
#    `../zen/zenmetrics/crates/...`, which doesn't resolve cleanly on
#    CI either even if coefficient itself were cloned. And restoring
#    the manifest there would re-create the optional cycle that
#    `e659cf57` originally moved coefficient out of `[dependencies]`
#    for.
# 3. The parity test was already `#[ignore]`d — it never ran on CI;
#    the cross-backend comparison methodology lives in git history
#    (`a4fe9a5e feat(ssim2-gpu): cross-repo CubeCL vs cudarse SSIM2
#    parity test skeleton`) and can be re-introduced locally via a
#    small patch when SSIM2 numeric agreement against the upstream
#    cudarse stack needs re-checking.
#
# If you need to re-enable: `git revert --no-commit <this commit's
# hash>` restores both the dev-dep line AND the test file. Build it
# only from a local checkout where `~/work/coefficient/` and
# `~/work/turbo-metrics/` (or `--archived-*` sibling) both resolve.
ssimulacra2 = { workspace = true }
yuvxyb = "0.5.0"
bytemuck = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "exr"] }
zenmetrics-corpus = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

# Examples and tests consuming the typed Ssim2<R> / Ssim2Batch<R>.
[[example]]
name = "batch_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "bench_batch"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "blur_parity"
required-features = ["cubecl-types"]

[[example]]
name = "cached_reference"
required-features = ["cubecl-types"]

[[example]]
name = "end_to_end"
required-features = ["cubecl-types"]

[[example]]
name = "parity_jpeg_corpus"
required-features = ["cubecl-types"]

[[example]]
name = "parity_real_image"
required-features = ["cubecl-types"]

[[example]]
name = "srgb_parity"
required-features = ["cubecl-types"]

[[example]]
name = "ssim2_bench_warm"
required-features = ["cubecl-types"]

[[example]]
name = "xyb_parity"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole"
required-features = ["cubecl-types"]

[[test]]
name = "it"
path = "tests/it/main.rs"

[[example]]
name = "upiq_pu_score_cuda"
required-features = ["cuda", "cubecl-types"]
