[package]
name = "zen-cloud-core"
description = "Cloud-agnostic worker trait layer: JobQueue / BlobStorage / Heartbeat / CredentialSource / WorkerHost + a generic claim→fetch→compute→upload→beat job loop. Zero gpu / cloud-SDK / parquet deps."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
keywords = ["cloud", "worker", "sweep", "job-queue", "blob-storage"]
categories = ["concurrency", "filesystem"]
publish = false

[dependencies]
# Trait + type layer. NO gpu, NO cloud-SDK, NO parquet. A small
# error-derive helper so CloudError reads cleanly across provider crates.
thiserror = { workspace = true }
# `r2creds` — the shared, provider-agnostic Cloudflare R2 scoped-credential
# minter every fleet launcher (salad / runpod / vastai) reuses. reqwest
# with rustls so consumers need no system OpenSSL; `json` for the serde
# request/response bodies. This is an HTTP client, not a cloud SDK.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Drive the async minter in a unit test without forcing tokio on the lib.
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros"] }
