[package]
name = "zen-cloud-salad"
description = "SaladCloud provider for the zen-cloud-core worker trait layer: a local HTTP job receiver fed by the baked-in salad-http-job-queue-worker sidecar (JobQueue), Salad IMDS + container-group env credentials (CredentialSource / WorkerHost), and the shared zen-cloud-s3 BlobStorage over a BYO R2/S3 bucket. The thin Salad glue around the same backend-agnostic compute closure vast.ai runs."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
keywords = ["saladcloud", "cloud", "worker", "job-queue", "imds"]
categories = ["concurrency", "api-bindings"]
publish = false

[lib]
name = "zen_cloud_salad"
path = "src/lib.rs"

[[bin]]
name = "zen-salad-sweep"
path = "src/bin/zen-salad-sweep.rs"
required-features = ["launcher"]

[features]
default = []
# The launcher binary needs a clap parser + SHA-256/HMAC for the SigV4
# signing of the operator-side R2 calls (HEAD/PUT/GET). Gated to keep
# the library lean.
launcher = ["dep:clap", "dep:sha2", "dep:hmac"]

[dependencies]
# The cloud-agnostic trait layer this crate implements.
zen-cloud-core = { workspace = true }
# Reuse the shared S3-compatible BlobStorage — Salad has no native
# object store, so workers bring their own R2/S3 bucket (spec §1.9
# item 4). Do NOT write a second S3 client.
zen-cloud-s3 = { workspace = true }
# Provider-generic fleet orchestration logic (TTL re-dispatch, replica
# overshoot, class filtering, speculative execution). The launcher
# binary calls into this for the launcher-side decisions; the lib
# itself does not depend on it.
zenfleet-orchestrator = { workspace = true }
# anyhow for the launcher-side REST plumbing's error model.
anyhow = "1.0.102"
# Async runtime. The JobQueue runs a tiny HTTP server (the local
# job-receiver the sidecar POSTs to) on a background runtime; the sync
# trait methods bridge to it over channels.
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
# Minimal HTTP server for the local job receiver. The shipped Salad
# sidecar (`salad-http-job-queue-worker`) forwards each queue job to the
# app as `POST http://localhost:<port><path>` with the job input as the
# body and reads the HTTP response body back as the job output. hyper +
# hyper-util + http-body-util is the lean way to serve exactly that
# without pulling a full web framework.
hyper = { version = "1.9.0", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["server", "tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
# IMDS + Salad public-API REST client (launcher provisioning + IMDS
# reads). reqwest with rustls so the docker image needs no system
# OpenSSL; `json` for serde request/response bodies.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# ── launcher-binary-only deps (gated by feature = "launcher") ─────────
# CLI parser for the operator-side launcher binary.
clap = { workspace = true, optional = true, features = ["env"] }
# SHA-256 + HMAC for the SigV4 signing of operator-side R2 HEAD/PUT/GET
# calls in the launcher binary. The library itself is signing-free
# (workers shell to s5cmd which uses ~/.aws/credentials).
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
# `blocking` for the queue roundtrip test, which simulates the sidecar's
# blocking HTTP POST from a background thread.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "blocking"] }
