[package]
name = "zen-jobdash"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Railway-deployable dashboard + control API for the zen job system. Reads the Parquet ledger / blob index / heartbeats; never runs workers."
license = "MIT OR Apache-2.0"

[lib]
name = "zen_jobdash"
path = "src/lib.rs"

[[bin]]
name = "zen-jobdash"
path = "src/bin/server.rs"

[dependencies]
zen-job-core = { version = "0.0.1", path = "../zen-job-core" }
zen-ledger = { version = "0.0.1", path = "../zen-ledger" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = "0.8.9"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net"] }
