[package]
name = "zen-metrics-cli"
version = "0.6.0"
description = "Unified CLI for decoding zen image formats and scoring perceptual quality metrics on CPU and GPU"
authors = ["Lilith River <support@imazen.io>"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version = "1.92"
publish = false

[[bin]]
name = "zen-metrics"
path = "src/main.rs"

[features]
# Defaults are CPU-only with the zen decoders available on crates.io that
# build cleanly against the latest archmage / magetypes. JPEG is omitted
# from the default set because zenjpeg 0.8.3 does not yet build against
# magetypes 0.9.x — see the `jpeg` feature note below.
default = ["png", "webp", "avif", "jxl", "cpu-metrics"]

# Decoder feature flags
png = ["dep:zenpng"]
# Optional: enables the `zenjpeg` decoder. The published 0.8.3 version
# fails to compile against magetypes >= 0.9 (see the issue tracker).
# Until a fixed release lands the CLI does not include JPEG support; once
# it does, opt in with `--features jpeg`.
jpeg = ["dep:zenjpeg"]
webp = ["dep:zenwebp"]
avif = ["dep:zenavif"]
jxl = ["dep:zenjxl"]

# CPU metric feature flags
cpu-metrics = [
    "dep:butteraugli",
    "dep:zensim",
    "dep:ssimulacra2",
    "dep:dssim-core",
    "dep:rgb",
    "dep:imgref",
]

# GPU bundle: pulls every GPU metric implementation.
gpu = ["gpu-butteraugli", "gpu-ssim2", "gpu-dssim"]
gpu-butteraugli = ["dep:butteraugli-gpu", "dep:cubecl"]
gpu-ssim2 = ["dep:ssim2-gpu", "dep:cubecl"]
gpu-dssim = ["dep:dssim-gpu", "dep:cubecl"]
# Pick CubeCL backends. Default forwards through the GPU metric crates which
# already enable cuda/wgpu/cpu when their default features are kept.
gpu-cuda = [
    "butteraugli-gpu?/cuda",
    "ssim2-gpu?/cuda",
    "dssim-gpu?/cuda",
    "cubecl?/cuda",
]
gpu-wgpu = [
    "butteraugli-gpu?/wgpu",
    "ssim2-gpu?/wgpu",
    "dssim-gpu?/wgpu",
    "cubecl?/wgpu",
]
gpu-hip = [
    "butteraugli-gpu?/hip",
    "ssim2-gpu?/hip",
    "dssim-gpu?/hip",
    "cubecl?/hip",
]
gpu-cpu = [
    "butteraugli-gpu?/cpu",
    "ssim2-gpu?/cpu",
    "dssim-gpu?/cpu",
    "cubecl?/cpu",
]

# `sweep` enables the codec-driving subcommand that encodes a source image
# across a (q, knob_tuple) Cartesian grid and scores each variant via the
# normal metric backends. Codecs stay "dumb" — the sweep driver pokes their
# `__expert` / public encode APIs directly without any in-codec picker glue.
#
# Codec coverage at zen-metrics-cli 0.3.0:
# - zenwebp 0.4.5, zenavif 0.1.7, zenjxl 0.2.1 each ship `__expert` and we
#   opt in here for the full knob bundle.
# - zenjpeg 0.8.3 (published) has no `__expert` feature — it lands in 0.8.4.
#   For now the sweep driver does not include zenjpeg; it can be added once
#   0.8.4 (or a `path = ...` override) is wired through.
sweep = [
    "webp",
    "avif",
    "jxl",
    "zenwebp?/__expert",
    "zenavif?/__expert",
    "zenjxl?/__expert",
    # zenjxl gates JxlEncoderConfig behind the `zencodec` feature, which
    # turns the wrapper struct on. Pull it through here so the sweep
    # driver sees the public encoder type at all.
    "zenjxl?/zencodec",
    # The runner round-trips encoded bytes through a tempfile so the
    # path-based decoder can sniff format identically to production.
    "dep:tempfile",
    # Encoders need rgb / imgref / zencodec / almost_enough at runtime.
    "dep:rgb",
    "dep:imgref",
    "dep:zencodec",
    "dep:almost-enough",
    # Direct jxl-encoder dep (in addition to zenjxl wrapper) so the JXL
    # sweep path can configure expert LossyConfig knobs the wrapper
    # doesn't expose: with_butteraugli_iters, with_zensim_iters,
    # with_ssim2_iters, with_pixel_domain_loss, with_patches,
    # with_gaborish, with_force_strategy, with_progressive,
    # with_error_diffusion, with_lf_frame, with_denoise. Same version
    # zenjxl 0.2.1 pins (0.3.1) so no duplicate compilation.
    "dep:jxl-encoder",
    # `--feature-output <path.parquet>` writes a per-cell sidecar of zensim's
    # 300-feature extended vector. Pulled into the sweep feature so the dep
    # cost is opt-in: a build without `--features sweep` doesn't ship the
    # Apache Arrow/Parquet stack.
    "dep:parquet",
    "dep:arrow-array",
    "dep:arrow-schema",
]

[dependencies]
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `preserve_order` keeps the JSON `compare` output in the order we insert
# keys (reference → variant → scores), matching the documented schema.
serde_json = { workspace = true, features = ["preserve_order"] }
csv = { workspace = true }

# zen image decoders
zenpng = { version = "0.1.4", optional = true }
zenjpeg = { version = "0.8.3", optional = true }
zenwebp = { version = "0.4.5", optional = true }
zenavif = { version = "0.1.7", optional = true }
zenjxl = { version = "0.2.1", optional = true }

# Direct jxl-encoder dep with the loop features that the zenjxl wrapper does
# not surface. Same version zenjxl 0.2.1 pins so no duplicate build. Used
# only by the `sweep` JXL path when expert knobs are present in the grid.
jxl-encoder = { version = "0.3.1", optional = true, default-features = false, features = [
    "std",
    "parallel",
    "butteraugli-loop",
    "ssim2-loop",
    "zensim-loop",
    "rate-control",
    "__expert",
    "convenience",
] }

# Pulled in by the `sweep` feature. zencodec exposes the EncodeJob /
# Encoder traits that drive zenjxl encoding; almost_enough is the
# cooperative-cancellation crate zenavif's encoder takes by value.
zencodec = { version = "0.1.20", optional = true }
almost-enough = { version = "0.4.3", optional = true }

# zenpixels exposes the PixelBuffer / PixelSlice types returned by zen
# decoders. We pin to a version compatible with the decoders above.
zenpixels = "0.2.11"
# enough provides the cooperative cancellation token zenpng's decode wants.
enough = "0.4.4"

# CPU metrics
butteraugli = { version = "0.9.2", optional = true }
# 0.2.8 adds `Zensim::compute_extended_features()` for sweep parquet output.
zensim = { version = "0.2.8", optional = true }
ssimulacra2 = { version = "0.5.1", optional = true }
dssim-core = { workspace = true, optional = true }
rgb = { version = "0.8", optional = true }
imgref = { version = "1", optional = true }

# GPU metric backends (path deps in this workspace)
butteraugli-gpu = { path = "../butteraugli-gpu", optional = true, default-features = false }
ssim2-gpu = { path = "../ssim2-gpu", optional = true, default-features = false }
dssim-gpu = { path = "../dssim-gpu", optional = true, default-features = false }

# CubeCL is required to construct GPU clients when any GPU backend is enabled.
# Optional — pulled in by the gpu-* feature flags.
cubecl = { version = "0.10.0-pre.4", default-features = false, features = ["std"], optional = true }

# tempfile is used by the `sweep` runner to round-trip encoded bytes
# through the path-based decoder. It is also used in the test suite,
# which is why it's kept as a runtime dep gated on the `sweep` feature
# rather than dev-only.
tempfile = { version = "3", optional = true }

# Parquet output sidecar for the `sweep` subcommand. Stores zensim's
# 300-feature extended vector per encoded cell so future selector / MLP
# retraining can reuse the per-cell features without re-running the full
# Cartesian sweep (which is the dominant compute cost).
# All three only flow in when `--features sweep` is enabled.
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"], optional = true }
arrow-array = { version = "58.2.0", optional = true }
arrow-schema = { version = "58.2.0", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
# Used by the `sweep_writes_zensim_feature_parquet` integration test to read
# back the parquet file the CLI produced. Aligned with the `parquet` version
# used by the sweep feature.
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"] }
